--- a/components/backend-tests-go-tbajpifb/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-tbajpifb/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-tbajpifb
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-tbajpifb:e1ca6cc5261515548c602f33f625321f36c608db@sha256:c9f2efe95decc0cb285c2f5263c91f57b227dcdd8dbcca1e4bb8221974eadcab
+          name: container-image
